--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0"
   }
