--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "basic-auth": "^2.0.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.9",
+    "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0"
   }
 }
