--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.9",
+    "mongoose-seeder": "^1.2.1",
     "morgan": "^1.9.0"
   }
 }
